@@ -40,6 +40,16 @@ public interface DatabaseConstants {
 	static final String TASK_ARG_VALIDATE_SCHEMA_VERSION = "validateSchemaVersion";
 	
 	/**
+	 * The task argument for forcing a utf-8 database connection.
+	 */
+	static final String TASK_ARG_FORCE_UTF8 = "forceUtf8";
+
+	/**
+	 * The task argument for enabling profiling on the database connection.
+	 */
+	static final String TASK_ARG_PROFILE_SQL = "profileSql";
+	
+	/**
 	 * The default host for a database connection.
 	 */
 	static final String TASK_DEFAULT_HOST = "localhost";
@@ -63,4 +73,14 @@ public interface DatabaseConstants {
 	 * The default value for whether schema version validation should be performed.
 	 */
 	static final boolean TASK_DEFAULT_VALIDATE_SCHEMA_VERSION = true;
+	
+	/**
+	 * The default value for forcing a utf-8 connection.
+	 */
+	static final boolean TASK_DEFAULT_FORCE_UTF8 = false;
+	
+	/**
+	 * The default value for enabling profile on a database connection.
+	 */
+	static final boolean TASK_DEFAULT_PROFILE_SQL = false;
 }
